--- a/war/app.cache.html
+++ b/war/app.cache.html
@@ -7,11 +7,12 @@
 
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=320, height=device-height, initial-scale=1">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <link type="text/css" rel="stylesheet" href="civcounsel/gwt/standard/standard.css">
-    <link type="text/css" rel="stylesheet" href="civcounsel/SliderBar.css">  
+    <!-- link type="text/css" rel="stylesheet" href="civcounsel/SliderBar.css" -->  
 
     <title>Civ Counsel</title>
     
@@ -60,7 +61,7 @@
 
   <body>
     <!-- OPTIONAL: include this if you want history support -->
-    <!-- iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe -->
+    <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 
     <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
     <noscript>
@@ -71,6 +72,6 @@
     </noscript>
     <!--  div style="background-color: #FFF0F0;">
     <img src="static/grp_Religion.png"/></div -->
-    <div id="clist"></div>
+    <div id="injectionPoint"></div>
   </body>
 </html>
