--- a/war/app.cache.html
+++ b/war/app.cache.html
@@ -15,7 +15,8 @@
     <!-- link type="text/css" rel="stylesheet" href="civcounsel/SliderBar.css" -->  
 
     <title>Civ Counsel</title>
-    
+
+    <script type="text/javascript" language="javascript" src="uuid.cache.js"></script>
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
