--- a/war/app.cache.html
+++ b/war/app.cache.html
@@ -61,16 +61,17 @@
   </head>
 
   <body>
-    <!-- OPTIONAL: include this if you want history support -->
-    <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
+    <!-- used for GWT history support -->
+    <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
+            style="position:absolute;width:0;height:0;border:0"></iframe>
 
-    <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
     <noscript>
-      <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
+      <div style="width:22em; position:absolute; left:50%; top:20%; margin-left:-11em; color:red; background-color:white; border:1px solid red; padding:4px; font-family:sans-serif">
         Your web browser must have JavaScript enabled
         in order for this application to display correctly.
       </div>
     </noscript>
+
     <!--  div style="background-color: #FFF0F0;">
     <img src="static/grp_Religion.png"/></div -->
     <div id="injectionPoint"></div>
