renamed app.html to app.cache.html

--- a/war/index.html
+++ b/war/index.html
@@ -2,12 +2,11 @@
 <head>
     <title>CivBuddy</title>
     <meta name="Robots" content="noindex,nofollow" />
-    <meta http-equiv="Refresh" content="0; URL=app.html" />
+    <meta http-equiv="Refresh" content="0; URL=app.cache.html" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 
 <body>
-<a href="app.html">CivBuddy</a>
+<a href="app.cache.html">CivBuddy</a>
 </body>
 </html>
-
