Renamed app from CivCounsel to CivBuddy

--- a/war/app.cache.html
+++ b/war/app.cache.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
-    <link type="text/css" rel="stylesheet" href="civcounsel/gwt/standard/standard.css">
-    <!-- link type="text/css" rel="stylesheet" href="civcounsel/SliderBar.css" -->  
+    <link type="text/css" rel="stylesheet" href="civbuddy/gwt/standard/standard.css">
+    <!-- link type="text/css" rel="stylesheet" href="civbuddy/SliderBar.css" -->  
 
     <title>Civ Counsel</title>
 
@@ -22,7 +22,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="civcounsel/civcounsel.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="civbuddy/civbuddy.nocache.js"></script>
 
     <!-- Since Chrome, of all browsers, does not understand the CSS rendered from GWT
          CSS resources in conditional comments, we must put these elements here: -->
