updated icon paths

--- a/iwebkit-test.html
+++ b/iwebkit-test.html
@@ -371,7 +371,7 @@
 <body>
 
 <div class="cb-titlebar cb-titlebar-gradient cb-titlebar-text-shadow">
-	<div id="leftnav"><span class="buttontext"><img alt="home" src="../../icon_players.png" /></span><span class="buttontext">Cards</span></div>
+	<div id="leftnav"><span class="buttontext"><img alt="home" src="src/com/tj/civ/client/resources/icon_players.png" /></span><span class="buttontext">Cards</span></div>
 	Andreas
 	<div id="rightnav"><span class="buttontext">Funds</span></div>
 </div>
@@ -411,14 +411,14 @@ lorem - Diese Zeile muss zu sehen sein, und hier kommt noch wesentlich mehr Text
 	Calculating dependencies ...
     <div id="cb-iconbutton-left" onMouseOver="enableGlow('cb-iconbutton-glow-left', true);"
         onMouseOut="enableGlow('cb-iconbutton-glow-left', false);"
-        ><img src="../../icon_add.png"/></div>
-    <div id="cb-iconbutton-glow-left"><img src="../../icon_glow.png"/></div>
-    <div id="cb-iconbutton-center" class="cb-iconbutton-disabled"><img src="../../icon_edit.png"/></div>
-    <div id="cb-iconbutton-glow-center"><img src="../../icon_glow.png"/></div>
+        ><img src="src/com/tj/civ/client/resources/icon_add.png"/></div>
+    <div id="cb-iconbutton-glow-left"><img src="src/com/tj/civ/client/resources/icon_glow.png"/></div>
+    <div id="cb-iconbutton-center" class="cb-iconbutton-disabled"><img src="src/com/tj/civ/client/resources/icon_edit.png"/></div>
+    <div id="cb-iconbutton-glow-center"><img src="src/com/tj/civ/client/resources/icon_glow.png"/></div>
     <div id="cb-iconbutton-right" onMouseOver="enableGlow('cb-iconbutton-glow-right', true);"
         onMouseOut="enableGlow('cb-iconbutton-glow-right', false);"
-        ><img src="../../icon_trash.png"/></div>
-    <div id="cb-iconbutton-glow-right"><img src="../../icon_glow.png"/></div>
+        ><img src="src/com/tj/civ/client/resources/icon_trash.png"/></div>
+    <div id="cb-iconbutton-glow-right"><img src="src/com/tj/civ/client/resources/icon_glow.png"/></div>
 </div>
 
 </body>
