--- a/war/app.cache.html
+++ b/war/app.cache.html
@@ -40,13 +40,16 @@
         /* Internet Explorer 5.5+ */
         .cb-titlebar-gradient {
             filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#b0bccd', endColorstr='#6d84a2');
+        }
+        .cb-titlebar-ie-wrapper {
             border-color: #2d3642;
             border-style: solid;
             border-width: 0 0 1px 0;   /* top right bottom left */
         }
+        .cb-extrabar-ie-wrapper {
+            top: 33px !important;   /* adjust for extra border in titlebar */
+        }
         .cb-extrabar-gradient {
-            top: 33px;    /* adjust for extra border */
-            height: 42px;
             filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#c0c9cf', endColorstr='#abb7bf');
         }
     </style>
