import keyframes.css

--- a/war/app.cache.html
+++ b/war/app.cache.html
@@ -11,6 +11,7 @@
          and cannot be reset. Can we prevent the turning? -->
 
     <link type="text/css" rel="stylesheet" href="civbuddy/gwt/standard/standard.css">
+    <link type="text/css" rel="stylesheet" href="keyframes.css">
 
     <title>CivBuddy</title>
     <!-- TODO web page icon -->
